# local-llm-service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: integration.md
sidecar/: Dockerfile  config.py  main.py
tests/: test_config.py  test_health.py
