[project]
name = "local-llm-service"
version = "0.1.0"
description = "Sidecar service for Ollama: health checks and automatic model pulling"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
